step one: base angular app and gulpfile

--- a/views/home.html
+++ b/views/home.html
@@ -6,10 +6,11 @@
   <link href="/public/bootstrap/dist/css/bootstrap.css" rel="stylesheet" type="text/css">
   <link href="/public/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet" type="text/css">
 </head>
-<body>
-<div class="container">
-  Hello, World!
+<body ng-app="newsApp">
+<div class="container" ng-controller="mainController">
+  {{ msg }}
 </div>
 <script src="/public/angular/angular.js"></script>
+<script src="/public/all.js"></script>
 </body>
 </html>
