--- a/views/home.html
+++ b/views/home.html
@@ -9,6 +9,8 @@
 <body ng-app="newsApp">
 <div class="container" ng-controller="mainController">
 
+  Add Ticker: <input type="text" ng-model="ticker" ng-keyup="$event.keyCode == 13 ? addTicker() : null">
+
   <table class="table">
     <tr>
       <th>Name</th>
