--- a/views/home.html
+++ b/views/home.html
@@ -9,8 +9,9 @@
 <body ng-app="newsApp">
 <div class="container" ng-controller="mainController">
 
-  Add Ticker: <input type="text" ng-model="ticker" ng-keyup="$event.keyCode == 13 ? addTicker() : null">
+  <input type="text" class="form-control" placeholder="Enter ticker" ng-model="ticker" ng-enter="addTicker()" focus-me>
 
+  <h1>Tickers</h1>
   <table class="table">
     <tr>
       <th>Name</th>
